BusOne02/src/objects/Inventory_Monitoring_vod__c.object
<CustomObject>
    <description>The Inventory Monitoring object holds general information about the inventory monitoring activities that took place.</description>
    <fields>
        <fullName>Account_ID_vod__c</fullName>
        <description>Stores Account ID</description>
        <label>Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>Stores Account Name</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account where the Inventory Monitoring was taken.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Monitorings</relationshipLabel>
        <relationshipName>Inventory_Monitorings_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assortment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designates the specific list of IM products to be loaded, and in which section they should be displayed to the user</description>
        <label>Assortment</label>
        <referenceTo>Assortment_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitorings</relationshipLabel>
        <relationshipName>Inventory_Monitorings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Call is a reference field to the Call record from which the Inventory Monitoring record was initiated. This reference value will be removed if the Call record is deleted.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitorings</relationshipLabel>
        <relationshipName>Inventory_Monitorings_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Objective_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Call Objective associated to the Inventory Monitoring</description>
        <label>Call Objective</label>
        <referenceTo>Call_Objective_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitorings</relationshipLabel>
        <relationshipName>Inventory_Monitorings_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to select the contract to be associated to the Inventory Monitoring.</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_vod__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Listing_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitorings</relationshipLabel>
        <relationshipName>Inventory_Monitorings_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime_vod__c</fullName>
        <description>Date and time the Inventory Monitoring was submitted.</description>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For internal use only.</description>
        <externalId>true</externalId>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_Date_vod__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date the Inventory Monitoring record was captured. Default: current date.</description>
        <label>Inventory Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Inventory_Monitoring_vod__c</fullName>
        <description>Formula field to determine if the Inventory Monitoring is the Parent IM or a child IM. 1 indicates that the record is the Parent IM, 0 indicates that it is a Child IM</description>
        <formula>IF(LEN(Parent_Inventory_Monitoring_ID_vod__c)&gt;0, 0,1)</formula>
        <label>Is Parent Inventory Monitoring?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Inventory Monitoring record is locked for editing.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Time the Inventory Monitoring was created on a mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Last time the Inventory Monitoring was modified on a mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <description>Any additional information pertinent to the Inventory Monitoring.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Inventory_Monitoring_ID_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Be careful when changing the label as it may affect existing merge templates.</description>
        <label>Parent Inventory Monitoring ID</label>
        <referenceTo>Inventory_Monitoring_vod__c</referenceTo>
        <relationshipLabel>Inventory Monitorings</relationshipLabel>
        <relationshipName>Inventory_Monitorings_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Photo_Rank_vod__c</fullName>
        <description>Used to score the sequence in which the photo was captured during an Inventory Monitoring, that leverages the zvod_Photo_Tag marker field</description>
        <label>Photo Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the Inventory Monitoring. Customers can add values to this picklist.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zvod_Photo_Tag_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to enable parent/child IM logic for multiple photo tagging</description>
        <label>zvod_Photo_Tag</label>
        <type>Checkbox</type>
    </fields>
    <label>Inventory Monitoring</label>
    <nameField>
        <displayFormat>IM-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Monitorings</pluralLabel>
    <recordTypes>
        <fullName>Inventory_Monitoring_vod</fullName>
        <active>true</active>
        <description>Base record type for Inventory Monitoring Header</description>
        <label>Inventory Monitoring</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>